  * Fix: Ctrl-F12 did not work from other windows than the main window
  * New Shortcut: Alt-F12 will open CC window, default DB and fetch the games
- Changes in user interface:
	* USCF piece set

[April 2009 ]

scid-3.7.2
-----------
- Fixes:
	* Small bug when closing ECO graph window (missing cleanup)
	* add missing global shortcuts
	* Bug when changing board pieces while the board was flipped
	* Closing a locked Tree window : the base switch was incomplete.
	* Bug with cursor handling (triggered for example by opening the tree window, the tree help and issuing the fill cache command)
	* Board auto resize while toggling game info display
	* Bug in "Calculation of variations" training (aka Stoyko exercise)
	* wrong assignments to ::CorrespondenceChess::num corrected
- FICS : user interface improvements : 
	* click on a game to observe it
	* redesign in notebook style
	* better looking offers graph
	* used icons from http://webdesignledger.com/freebies/21-best-icon-sets-for-designing-web-apps
	* added a check box to enable standard user variables
- Correspondence Chess:
	* Add confirmation dialogue of CC moves. (Suggested by Dhanish)
	* Add copy cc games list to clipboard. (Suggested by Dhanish)
	* Add Ctrl-Up/Down scrolling through games. (Suggested by Dhanish)
	* Ctrl-F12 now also processes the inbox automatically. (Suggested by Dhanish)
	* Check if mainline is longer then the games mainline, eg. due to a users error (Suggested by Dhanish)
	* Disable engine analysis in games that do not allow it,  ie. Xfcc noEngines = true. If noEngines is not set assume "engines allowed" (ICCF). (Suggested by Austin)
- Spell checker : enhanced user feedback, operation can be cancelled, all names corrected instead of the first 2000 (thanks to Joost Hart)
- User interface:
	* blindfold play (piece set)
	* Add SAA/CUA hotkeys for clipboard (Ctrl-Ins, Shift-Ins)
- Translations:
	* hungarian updated (thanks to Szőts Gábor)
	* swedish updated (thanks to Hans Eriksson)